--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
+.red {
+  color: red;
+}
+.green {
+  color: green;
+}
 body {
+  padding: 15px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
