--- a/src/App.scss
+++ b/src/App.scss
@@ -8,12 +8,71 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media (min-width: 1480px) {
+    .container, .container-lg, .container-md, .container-sm, .container-xl {
+      max-width: 1450px !important;
+  }
+}
+
+
 .app-container {
   .header-container {
-    .navbar-nav {
+    .navbar {
+      padding-top: 15px;
       .nav-link {
         &.active {
           color: #00bfff;
+        }
+      }
+    }
+  }
+  .btn-login {
+    border-radius: 5px;
+    margin-right: 15px;
+    padding: 0 15px;
+    height: 40px;
+    border: 1px solid #282828;
+  } 
+  .btn-signup {
+    border: 1px solid #282828;
+    border-radius: 5px;
+    padding: 0 10px;
+    background-color: #191919;
+    color: white;
+    &:hover {
+      background-color: #2e2d2d;
+    }
+  }
+  .app-content {
+    .homepage-container {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      .homepage-video {
+        flex-basis: 49%;
+      }
+      .homepage-content {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        flex-basis: 49%;
+        .title-main {
+          font-size: 80px;
+        }
+        .title-detail {
+          font-weight: 400;
+          font-size: 24px;
+        }
+        .title-button {
+          border: 1px solid #282828;
+          border-radius: 5px;
+          background-color: #191919;
+          color: white;
+          font-size: 16px;
+          padding: 12px 24px;
+          &:hover {
+            background-color: #2e2d2d;
+          }
         }
       }
     }
